tests/asm-link/purge-refs/rgbasm.err
error: labels cannot be deleted
   ╭─[ test.asm:6:8 ]
   │
 6 │     PURGE Floating ; This used to cause a use-after-free
   │           ────┬───  
   │               ╰───── attempting to delete `Floating` here
───╯
error: labels cannot be deleted
    ╭─[ test.asm:13:8 ]
    │
 13 │     PURGE Fixed ; Can work, it's a constant
    │           ──┬──  
    │             ╰──── attempting to delete `Fixed` here
────╯
2 errors generated.
